# python

./: .gitignore  README.md  env.example
FUN/: calc.py
python0/ex0/: ft_hello_garden.py
python0/ex1/: ft_garden_name.py
python0/ex2/: ft_plot_area.py
python0/ex3/: ft_harvest_total.py
python0/ex4/: ft_plant_age.py
python0/ex5/: ft_water_reminder.py
python0/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python0/ex7/: ft_seed_inventory.py
python1/ex0/: ft_garden_intro.py  ft_hello_garden.py
python1/ex1/: ft_garden_data.py  ft_garden_name.py
python1/ex2/: ft_plant_growth.py  ft_plot_area.py
python1/ex3/: ft_harvest_total.py  ft_plant_factory.py
python1/ex4/: ft_garden_security.py  ft_plant_age.py
python1/ex5/: ft_plant_types.py
python1/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_garden_analytics.py
python1/ex7/: ft_seed_inventory.py
python2/ex0/: ft_first_exception.py  ft_garden_intro.py
python2/ex1/: ft_garden_data.py  (+1 more)
python6/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_1.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py
python7/: battle.py  tournament.py
python_module_06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_transmutation_2.py
python_module_07/: battle.py  capacitor.py  tournament.py
python_module_08/ex1/: loading.py  pyproject.toml
(+104 files in other folders)
