[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "vsack",email = "sackvalentin@gmail.com"}
]
requires-python = ">=3.11,<=3.14.4"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
